--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "minecraft-react",
+  "name": "scapecvs-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@react-three/cannon": "^3.1.2",
     "@react-three/drei": "^7.12.5",
     "@react-three/fiber": "^7.0.7",
+    "nanoid": "^3.1.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "three": "^0.132.2",
-    "nanoid": "^3.1.20",
     "zustand": "^3.0.3"
   },
   "scripts": {
